--- a/css/style.css
+++ b/css/style.css
@@ -898,6 +898,10 @@ body::after {
   margin-bottom: 10px;
 }
 
+.certificates {
+  margin-top: 70px;
+}
+
 .certificates__pictures {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1029,6 +1033,13 @@ body::after {
 
 .swiper {
   overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  z-index: 1;
 }
 
 .swiper-wrapper {
@@ -1233,6 +1244,29 @@ body::after {
   padding: 0 30px;
   color: white;
   background-color: rgba(255, 0, 0, 0.6);
+}
+
+.swiper-slide {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  -o-transition-property: transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition: -webkit-transform 0.5s ease 0s;
+  transition: -webkit-transform 0.5s ease 0s;
+  -o-transition: transform 0.5s ease 0s;
+  transition: transform 0.5s ease 0s;
+  transition: transform 0.5s ease 0s, -webkit-transform 0.5s ease 0s;
+}
+
+.swiper-autoheight,
+.swiper-autoheight .swiper-slide {
+  height: auto;
 }
 
 @font-face {
@@ -2206,18 +2240,5 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-  }
-
-  .row-projects__item img {
-    -webkit-transition: all 0.8s ease 0s;
-    -o-transition: all 0.8s ease 0s;
-    transition: all 0.8s ease 0s;
-    -webkit-filter: grayscale(1);
-            filter: grayscale(1);
-  }
-
-  .row-projects__item:hover img {
-    -webkit-filter: grayscale(0);
-            filter: grayscale(0);
   }
 }
