--- a/css/style.css
+++ b/css/style.css
@@ -593,6 +593,20 @@ body::after {
   letter-spacing: 1px;
   /* identical to box height, or 100% */
   color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0px 3px;
+  padding: 5px 0px;
+  position: relative;
 }
 
 .menu__item:hover {
@@ -600,6 +614,12 @@ body::after {
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
   color: rgb(0, 141, 172);
+}
+
+.menu__item:nth-child(3) {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .menu__link {
@@ -631,6 +651,24 @@ body::after {
       -ms-transform: translate(0, 0);
           transform: translate(0, 0);
   opacity: 1;
+}
+
+.menu__sub-list {
+  position: relative;
+  background-color: rgba(0, 164, 200, 0.6);
+  padding: 20px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 100%;
+          flex: 1 1 100%;
+}
+
+.menu__sub-item:not(:last-child) {
+  margin: 0px 0px 5px 0px;
+}
+
+.menu__sub-link {
+  color: #fff;
+  line-height: 120%;
 }
 
 .logo {
@@ -793,7 +831,7 @@ body::after {
 
 .advantages__point {
   list-style: disc;
-  text-align: right;
+  text-align: left;
   list-style-position: inside;
 }
 
@@ -964,69 +1002,6 @@ body::after {
   color: #000000;
 }
 
-.request {
-  margin-top: 70px;
-}
-
-.request__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 10px;
-  width: 50%;
-}
-
-.request__item label {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
-}
-
-.request__item input {
-  font-size: 20px;
-  line-height: 24px;
-  border-bottom: 1px solid #000;
-}
-
-.request__item textarea {
-  padding: 15px;
-  border-radius: 10px;
-  min-height: 200px;
-  border: 1px solid #000;
-}
-
-.request__input {
-  width: 100%;
-}
-
-.forms {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 25px;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 50%;
-          flex: 0 0 50%;
-}
-
-.button {
-  padding: 10px 30px;
-  border-radius: 10px;
-  border: 1px solid #000;
-}
-
 .map {
   margin-top: 70px;
 }
@@ -1126,6 +1101,13 @@ body::after {
 
 .catalog {
   margin-top: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .catalog__slide {
@@ -1150,14 +1132,6 @@ body::after {
   -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
   height: 350px;
-}
-
-.catalog__slide.swiper-slide-active .slide__button {
-  opacity: 1;
-  -webkit-transition: all 0.5s ease 0s;
-  -o-transition: all 0.5s ease 0s;
-  transition: all 0.5s ease 0s;
-  visibility: visible;
 }
 
 .catalog__subtitle {
@@ -1228,22 +1202,40 @@ body::after {
   -webkit-transition: all 0.5s ease 0s;
   -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
-  opacity: 0;
-  visibility: hidden;
-  max-width: -webkit-fit-content;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-  line-height: 40px;
+  display: inline-block;
   border-radius: 10px;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 40px;
-  /* identical to box height */
-  color: #ffffff;
-  padding: 0 30px;
+  text-align: center;
+  margin-top: 30px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding: 5px 35px;
   color: white;
-  background-color: rgba(255, 0, 0, 0.6);
+  background-color: rgba(200, 0, 0, 0.6);
+}
+
+.slide__button span {
+  text-align: center;
+}
+
+.slide__button:hover {
+  -webkit-transform: translate(0px, -5px);
+      -ms-transform: translate(0px, -5px);
+          transform: translate(0px, -5px);
+  -webkit-box-shadow: 0px 5px 0 hsla(0deg, 100%, 13%, 0.6);
+          box-shadow: 0px 5px 0 hsla(0deg, 100%, 13%, 0.6);
+}
+
+.slide__button:active {
+  -webkit-transform: translate(0px, 5px);
+      -ms-transform: translate(0px, 5px);
+          transform: translate(0px, 5px);
+  -webkit-box-shadow: 0px 5px 0 hsla(0deg, 100%, 13%, 0);
+          box-shadow: 0px 5px 0 hsla(0deg, 100%, 13%, 0);
 }
 
 .swiper-slide {
@@ -1252,16 +1244,6 @@ body::after {
   width: 100%;
   height: 100%;
   position: relative;
-  -webkit-transition-property: -webkit-transform;
-  transition-property: -webkit-transform;
-  -o-transition-property: transform;
-  transition-property: transform;
-  transition-property: transform, -webkit-transform;
-  -webkit-transition: -webkit-transform 0.5s ease 0s;
-  transition: -webkit-transform 0.5s ease 0s;
-  -o-transition: transform 0.5s ease 0s;
-  transition: transform 0.5s ease 0s;
-  transition: transform 0.5s ease 0s, -webkit-transform 0.5s ease 0s;
 }
 
 .swiper-autoheight,
@@ -1970,6 +1952,45 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   left: 0;
 }
 
+@media (min-width: 61.99875em) {
+  .menu__item._hover .menu__sub-list {
+    -webkit-transform: translate(0px, 0px);
+        -ms-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+
+  .menu__item._hover .menu__arrow {
+    -webkit-transform: rotate(-180deg);
+        -ms-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+  }
+
+  .menu__item._hover .menu__arrow,
+  .menu__item._hover .menu__link {
+    color: rgba(0, 164, 200, 0.6);
+  }
+
+  .menu__sub-list {
+    opacity: 0;
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    -webkit-transform: translate(-20px, 0px);
+        -ms-transform: translate(-20px, 0px);
+            transform: translate(-20px, 0px);
+    visibility: hidden;
+    min-width: 200px;
+    left: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 100%;
+    z-index: 5;
+  }
+}
+
 @media (max-width: 1160px) {
   .header__phone {
     font-weight: 400;
@@ -2104,6 +2125,26 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
     margin-bottom: 20px;
   }
 
+  .menu__item {
+    margin: 0px 0px 15px 0px;
+  }
+
+  .menu__item:last-child {
+    margin-bottom: 0;
+  }
+
+  .menu__sub-list {
+    margin: 10px -15px 0px -15px;
+  }
+
+  .menu__sub-item:not(:last-child) {
+    margin: 0px 0px 10px 0px;
+  }
+
+  .menu__sub-link {
+    font-size: 18px;
+  }
+
   .popup__btn {
     bottom: 50px;
     right: 100px;
@@ -2135,10 +2176,6 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
 
   .advantages__point {
     text-align: center;
-  }
-
-  .request__item {
-    width: 80%;
   }
 }
 
@@ -2210,10 +2247,6 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   .certificates__picture {
     max-width: 80%;
   }
-
-  .request__item {
-    width: 100%;
-  }
 }
 
 @media (max-width: 29.99875em) {
@@ -2228,17 +2261,41 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   }
 }
 
-@media (any-hover: none) {
-  .projects__body {
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-  }
-}
-
 @media (any-hover: hover) {
+  .menu__item:hover .menu__sub-list {
+    -webkit-transform: translate(0px, 0px);
+        -ms-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+
+  .menu__item:hover .menu__arrow {
+    -webkit-transform: rotate(-180deg);
+        -ms-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+  }
+
+  .menu__item:hover .menu__arrow,
+  .menu__item:hover .menu__link {
+    color: rgba(0, 164, 200, 0.6);
+  }
+
+  .menu__sub-link:hover {
+    text-decoration: underline;
+  }
+
   .projects__items {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+}
+
+@media (any-hover: none) {
+  .projects__body {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
