--- a/css/style.css
+++ b/css/style.css
@@ -1123,6 +1123,17 @@ body::after {
   width: 100%;
 }
 
+.item-product__image.special-img img {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .item-product__body {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
