--- a/css/style.css
+++ b/css/style.css
@@ -802,25 +802,6 @@ body::after {
   color: #ffffff;
 }
 
-.popup__btn {
-  position: fixed;
-  bottom: 10%;
-  right: 5%;
-  z-index: 1;
-  padding: 10px;
-  background-color: rgba(0, 164, 200, 0.6);
-  border-radius: 50%;
-  -webkit-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
-}
-
-.popup__btn:hover {
-  background-color: rgba(0, 164, 200, 0.9);
-}
-
 .aboutUs__container {
   margin-top: 70px;
 }
@@ -1030,6 +1011,140 @@ body::after {
   font-size: 16px;
   line-height: 19px;
   color: #000000;
+}
+
+.chat {
+  position: fixed;
+  z-index: 10;
+  right: 4%;
+  bottom: 10%;
+  border-radius: 0px 0px 25px 25px;
+  cursor: pointer;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.content-point {
+  padding: 10px 0px;
+}
+
+.content-point:nth-child(2) {
+  padding-bottom: 15px;
+}
+
+.phone {
+  width: 48px;
+  height: 48px;
+  padding: 5px;
+  border-radius: 50%;
+  background-color: rgb(0, 141, 172);
+}
+
+.phone__header {
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  border-radius: 50%;
+  background-color: rgb(0, 141, 172);
+}
+
+.content__type {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  border-radius: 35px;
+  opacity: 0;
+  -webkit-transform: translate(0%, 100%);
+      -ms-transform: translate(0%, 100%);
+          transform: translate(0%, 100%);
+}
+
+.content__type.open {
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+.chat__icon {
+  width: 58px;
+  height: 58px;
+  z-index: 1;
+  padding: 10px;
+  background-color: rgba(0, 164, 200, 0.6);
+  border-radius: 50%;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
+.chat__icon img {
+  width: 100%;
+}
+
+.chat__icon .close {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  -webkit-transform: translate(0px, 100%);
+      -ms-transform: translate(0px, 100%);
+          transform: translate(0px, 100%);
+}
+
+.chat__icon.open .close {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  -webkit-transform: translate(0px, -100%);
+      -ms-transform: translate(0px, -100%);
+          transform: translate(0px, -100%);
+}
+
+.chat__icon.open .open {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  -webkit-transform: translate(0px, -100%);
+      -ms-transform: translate(0px, -100%);
+          transform: translate(0px, -100%);
+}
+
+.chat__icon .open {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  -webkit-transform: translate(0px, 0%);
+      -ms-transform: translate(0px, 0%);
+          transform: translate(0px, 0%);
+}
+
+.chat__icon:hover {
+  background-color: rgba(0, 164, 200, 0.9);
 }
 
 .map {
@@ -2416,11 +2531,6 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
     font-size: 18px;
   }
 
-  .popup__btn {
-    bottom: 50px;
-    right: 100px;
-  }
-
   .aboutUs__container {
     margin-top: 50px;
   }
@@ -2447,6 +2557,11 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
 
   .advantages__point {
     text-align: center;
+  }
+
+  .chat__icon {
+    bottom: 50px;
+    right: 100px;
   }
 }
 
@@ -2499,11 +2614,6 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
     right: 5%;
   }
 
-  .popup__btn {
-    bottom: 20px;
-    right: 50px;
-  }
-
   .certificates__pictures {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2518,15 +2628,36 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   .certificates__picture {
     max-width: 80%;
   }
+
+  .chat__icon {
+    bottom: 20px;
+    right: 50px;
+  }
 }
 
 @media (max-width: 29.99875em) {
-  .links img {
-    border-radius: 50%;
-    border: 1px solid black;
+  .header__menu {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
   }
 
-  .popup__btn {
+  .header__contact {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+  }
+
+  .header__phone {
+    display: none;
+  }
+
+  .header__phone.icon {
+    display: block;
+  }
+
+  .chat__icon {
     bottom: 20px;
     right: 20px;
   }
