--- a/css/style.css
+++ b/css/style.css
@@ -1179,7 +1179,13 @@ body::after {
   display: -ms-grid;
   display: grid;
   gap: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(285px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(285px, 0.5fr));
+}
+
+.products__item {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .products__footer {
@@ -1202,7 +1208,7 @@ body::after {
 }
 
 .item-product {
-  background: #f4f5f7;
+  background: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1240,6 +1246,7 @@ body::after {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
+  height: 100%;
 }
 
 .item-product__image.special-img img {
@@ -1251,6 +1258,7 @@ body::after {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  height: 100%;
 }
 
 .item-product__body {
@@ -1265,6 +1273,8 @@ body::after {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
 }
 
 .item-product__content {
@@ -2567,6 +2577,12 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   .chat__icon {
     bottom: 50px;
     right: 100px;
+  }
+
+  .products__items {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
